# mcp-general-purpose

./: README.md  pyproject.toml
app/: main.py  mcp_simple_tool.py  sample_sse_simplified.py  sample_sse_simplized.py  sample_stdio_simplified.py  sample_stdio_simplized.py  test.py
mcp_simple_tool/: __main__.py  server.py
test_apps/: main.py
