[project]
name = "mcp-general-purpose"
version = "0.1.0"
description = ""
authors = [{ name = "jujumilk3", email = "jujumilk3@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp[cli] (>=1.3.0,<2.0.0)", "httpx (>=0.28.1,<0.29.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
